Add support VC4.1